--- a/package.json
+++ b/package.json
@@ -2,19 +2,24 @@
   "name": "navareno2",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
+    "seed-db": "node src/utils/seed-db.js",
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.2",
     "@mui/material": "^7.1.2",
+    "@mui/x-data-grid": "^8.5.3",
     "@neondatabase/serverless": "^1.0.1",
-    "@types/pg": "^8.15.4",
+    "dotenv": "^16.5.0",
     "next": "15.3.4",
     "pg": "^8.16.2",
+    "postgres": "^3.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -22,11 +27,13 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pg": "^8.15.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
