--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "pg": "^8.16.2",
     "postgres": "^3.4.7",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-qr-code": "^2.0.16"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
