--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@mui/material": "^7.1.2",
     "@mui/x-data-grid": "^8.5.3",
     "@neondatabase/serverless": "^1.0.1",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.19.1",
     "next": "15.3.4",
+    "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.1",
     "pg": "^8.16.2",
     "postgres": "^3.4.7",
     "react": "^19.0.0",
@@ -29,6 +32,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.15.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
