Refactor Category and Recipe Detail pages: enhance mobile responsiveness, improve button styling, and update sorting options for better user experience

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,10 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
+docs.config.json
+scripts/update-readme.js
+scripts/update-all-docs.js
+scripts/generate-component-docs.js
+scripts/generate-api-docs.js
+.idea/inspectionProfiles/Project_Default.xml
+.github/workflows/update-docs.yml
