Add AI image analysis feature in AddRecipePage: implement image upload, analysis functionality, and auto-fill recipe form with AI-generated data. Update README and package.json for new dependencies and documentation.

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,4 @@ scripts/generate-component-docs.js
 scripts/generate-api-docs.js
 .idea/inspectionProfiles/Project_Default.xml
 .github/workflows/update-docs.yml
+package-lock.json
