--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
+    "react-icons": "^5.5.0",
     "react-qr-code": "^2.0.16",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.67"
